--- a/5-Engines-Template-TNT-v.2-New.html
+++ b/5-Engines-Template-TNT-v.2-New.html
@@ -329,8 +329,9 @@
 </a>
 <a href="https://contact.ebay.com.au/ws/eBayISAPI.dll?FindAnswers&requested=jonojohno20004&iid=171361276014" target="_blank"><img src="https://www.jonoandjohno.com.au/templates/images/tnt_delivery.jpg" class="img-responsive img-rounded"  width="100%" height="auto" alt="Jono & Johno eBay Online Store " />
 </a>
-<a href="https://stores.ebay.com.au/jonojohno20004/Contact.html" target="_blank"> </a> 
+<a href="https://stores.ebay.com.au/jonojohno20004/Contact.html" target="_blank"> 
 <img  src="https://www.jonoandjohno.com.au/templates/samples/contactbottom/contact-bottom-5.png" class="img-responsive img-rounded"  width="100%" height="auto" alt="Jono & Johno eBay Contact number "/>
+</a> 
 <a href="https://stores.ebay.com.au/jonojohno20004/Contact.html" target="_blank">
 <img src="https://www.jonoandjohno.com.au/templates/images/location.jpg" class="img-responsive img-rounded"  width="100%" height="auto" alt="Jono & Johno eBay Online Store "/>
 </a>
