--- a/5-Engines-Template-TNT-v.2-New.html
+++ b/5-Engines-Template-TNT-v.2-New.html
@@ -47,7 +47,7 @@
 </ul>
 </div>
 
-<div class="col-md-9" style="background-color: white;">
+<div class="col-md-9" style="background-color: white; border-radius: 3px; border: 1px; border-style: solid; border-color: #d9d9d9;">
 <br />
 <img   src="https://www.jonoandjohno.com.au/templates/images/top_freight_unstructions.jpg"  class="img-responsive img-rounded"  width="100%" height="auto" alt="Jono & Johno eBay Online Store "/>
 <hr />
@@ -152,7 +152,7 @@
 
 
 <div class="row" style="background-image: url(https://www.jonoandjohno.com.au/templates/backgrounds/tnt_bcg.jpg); width: 100%; height: 400px;  background-repeat: no-repeat; background-position: center fixed; 
-  background-size: cover;">
+  background-size: cover; margin-left: 0px;">
 
 <div class="col-md-9">
 <br/>
@@ -174,11 +174,11 @@
 </div>
 
 <div class="row"  style="background-image: url(https://www.jonoandjohno.com.au/templates/backgrounds/fencing/fencebanners/scroll_down1.jpg); width:100%; height: 85px;  background-repeat: no-repeat; background-position: center fixed; 
-  background-size: cover;">
+  background-size: cover; margin-left: 0px;">
 </div>
 
-<div class="row"  style="background-image: url(https://www.jonoandjohno.com.au/templates/backgrounds/fencing/final/recoil_start_bcg-1.jpg); height: 347px; width: 1170px; background-repeat: no-repeat; background-position: center fixed; 
-  background-size: cover;">
+<div class="row"  style="background-image: url(https://www.jonoandjohno.com.au/templates/backgrounds/fencing/final/recoil_start_bcg-1.jpg); width: 100%; height: 347px;  background-repeat: no-repeat; background-position: center fixed; 
+  background-size: cover; margin-left: 0px;">
 <div class="col-md-3">
 </div>
    
@@ -210,8 +210,8 @@
 </div>
 </div>    
 
-<div class="row"  style="background-image: url(https://www.jonoandjohno.com.au/templates/backgrounds/fencing/final/elctric-bcg-1.jpg); height: 370px; width: 1170px; background-repeat: no-repeat; background-position: center fixed; 
-  background-size: cover;">
+<div class="row"  style="background-image: url(https://www.jonoandjohno.com.au/templates/backgrounds/fencing/final/elctric-bcg-1.jpg); width: 100%;  height: 370px; background-repeat: no-repeat; background-position: center fixed; 
+  background-size: cover; margin-left: 0px;">
 
 <div class="col-md-3">
 </div>
@@ -245,8 +245,8 @@
 </div>
 </div>  
 
-<div class="row"  style="background-image: url(https://www.jonoandjohno.com.au/templates/backgrounds/fencing/final/reduction-bgc-1.jpg); height: 367px; width: 1170px; background-repeat: no-repeat; background-position: center fixed; 
-  background-size: cover;">
+<div class="row"  style="background-image: url(https://www.jonoandjohno.com.au/templates/backgrounds/fencing/final/reduction-bgc-1.jpg); width: 100%; height: 367px;  background-repeat: no-repeat; background-position: center fixed; 
+  background-size: cover; margin-left: 0px;">
 <div class="col-md-3">
 </div>
 <div class="col-md-3">
@@ -279,8 +279,8 @@
 </div>
 </div>  
    
-<div class="row"  style="background-image: url(https://www.jonoandjohno.com.au/templates/backgrounds/fencing/final/vertical-shaft-1.jpg); height: 400px; width: 1170px; background-repeat: no-repeat; background-position: center fixed; 
-  background-size: cover;">
+<div class="row"  style="background-image: url(https://www.jonoandjohno.com.au/templates/backgrounds/fencing/final/vertical-shaft-1.jpg); width: 100%; height: 400px;  background-repeat: no-repeat; background-position: center fixed; 
+  background-size: cover; margin-left: 0px;">
 <div class="col-md-3">
 </div>
 <div class="col-md-3">
@@ -314,7 +314,7 @@
 </div>
 </div>
 
-<div class="row" style="background-color: black;">
+<div class="row">
 
 <div class="col-md-12">
 <a href="https://stores.ebay.com.au/jonojohno20004" target="_blank">
